infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: neeejm/blog-moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-svc
spec:
  selector:
    app: moderation
  ports:
    - port: 80
      targetPort: 80
