infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: neeejm/blog-query
---
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  selector:
    app: query
  ports:
    - port: 80
      targetPort: 80
