infra/k8s/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: blog.local
      http:
        paths:
          - pathType: Exact
            path: /posts/create
            backend:
              service:
                name: posts-svc
                port:
                  number: 80
          - pathType: Exact
            path: /posts/(.*)/comments
            backend:
              service:
                name: comment-svc
                port:
                  number: 80
          - pathType: Exact
            path: /posts
            backend:
              service:
                name: query-svc
                port:
                  number: 80
          - pathType: Exact
            path: /?(.*)
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
